메타태그 추가

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://leeyeonjoo92.github.io/portfolio/" />
+		<meta property="og:title" content="퍼블리셔 이연주 포트폴리오" />
+		<meta property="og:description" content="깃허브 페이지로 만들어진 사이트입니다." />
+		<meta property="og:image" content="/portfolio/ogimg.png" />
 
 		<link rel="shortcut icon" type="image/x-icon" href="/portfolio/favicon.ico">
 
