--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://leeyeonjoo92.github.io/portfolio/" />
 		<meta property="og:title" content="퍼블리셔 이연주 포트폴리오" />
-		<meta property="og:description" content="깃허브 페이지로 만들어진 사이트입니다." />
+		<meta property="og:description" content="다양한 경험에 목마른 1년 4개월 경력의 퍼블리셔 이연주 입니다." />
 		<meta property="og:image" content="/portfolio/ogimg.png" />
 
 		<link rel="shortcut icon" type="image/x-icon" href="/portfolio/favicon.ico">
