--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<!-- 헤더 -->
 		<header id="header">
 			<div class="header-con">
-				<a href="/" class="logo"><img src="/portfolio/img/logo.png"></a>
+				<a href="/portfolio" class="logo"><img src="/portfolio/img/logo.png"></a>
 				<!-- pc 메뉴 -->
 				<nav class="navi nav-wide">
 					<ul>
@@ -289,7 +289,7 @@
 							<div class="img-wrap project-lyj"><img src="/portfolio/img/logo.png"></div>
 							<div class="project-txt">
 								<div class="project-txt-topic">
-									<div><span>프로젝트명 : </span><a href="/" target="_blank" class="site-link">개인 포트폴리오 홈페이지</a></div>
+									<div><span>프로젝트명 : </span><a href="/portfolio" target="_blank" class="site-link">개인 포트폴리오 홈페이지</a></div>
 									<div><span>프로젝트 기간 : </span>23.08~23.09</div>
 									<div><span>퍼블리싱 기여도 : </span>100%</div>
 									<div><span>프로젝트 종류 : </span>반응형 웹</div>
