--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                 <div class="project-txt-topic">
                   <div>
                     <span>프로젝트명 : </span>
-                    <span class="site-link">금융서비스</span>
+                    <div>금융서비스</div>
                   </div>
                   <div><span>프로젝트 기간 : </span>23.09</div>
                   <div><span>퍼블리싱 기여도 : </span>100%</div>
@@ -344,8 +344,8 @@
               <div class="project-txt">
                 <div class="project-txt-topic">
                   <div>
-                    <span>프로젝트명 : </span
-                    ><span class="site-link">회사 홈페이지 리뉴얼</span>
+                    <span>프로젝트명 : </span>
+                    <div>회사 홈페이지 리뉴얼</div>
                   </div>
                   <div><span>프로젝트 기간 : </span>22.08~23.04</div>
                   <div>
